Add exports for SharedSecrets access + small build file refactor