@@ -1,10 +1,15 @@
 plugins {
     id 'java'
     id 'maven-publish'
+    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.7'
 }
 
 group 'com.cleanroommc'
 version '0.4'
+
+def compiler_arguments = [
+        '--add-exports=java.base/jdk.internal.access=ALL-UNNAMED',
+]
 
 repositories {
     mavenCentral()
@@ -17,13 +22,6 @@ repositories {
 configurations {
     embed
     implementation.extendsFrom(embed)
-}
-
-tasks {
-    compileTestJava {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
-    }
 }
 
 dependencies {
@@ -65,13 +63,23 @@ for (int i in 9 .. 21) {
     }
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.addAll(compiler_arguments)
+}
+
+tasks.named('compileTestJava') {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
+idea.project.settings.compiler.javac.javacAdditionalOptions = compiler_arguments.join(' ')
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
         }
     }
-    // select the repositories you want to publish to
     repositories {
         maven {
             name = 'CleanroomMaven'
